Readme (file, tasks, scope) and documentation updates  (#58)
* readme and documentation

* fixed docs

* throughput change

* design considerations change