@@ -11,23 +11,30 @@ import Messaging.SystemMessage;
 import Messaging.Transmitters.DMA_Transmitter;
 
 import com.sun.jdi.InvalidTypeException;
+import java.util.ArrayList;
+import java.util.Map;
+import java.util.HashMap;
+import java.util.Set;
+import java.util.HashSet;
 
-import java.util.*;
-
-
+/**
+ * Scheduler class which models a scheduler in the simulation.
+ *
+ * @version Iteration-2
+ */
 public class Scheduler implements Runnable {
     private final DMA_Transmitter transmitterToFloor;
     private final DMA_Transmitter transmitterToElevator;
     private final DMA_Receiver receiver;
     private final Map<DestinationEvent, Long> floorRequestsToTime;
-    private final LinkedList<ElevatorStateEvent> idleElevators;
+    private ArrayList<ElevatorStateEvent> idleElevators;
 
     public Scheduler(DMA_Receiver receiver, DMA_Transmitter transmitterToFloor, DMA_Transmitter transmitterToElevator) {
         this.receiver = receiver;
         this.transmitterToElevator = transmitterToElevator;
         this.transmitterToFloor = transmitterToFloor;
         floorRequestsToTime = new HashMap<>();
-        idleElevators = new LinkedList<>();
+        idleElevators = new ArrayList<ElevatorStateEvent>();
     }
 
     /**
@@ -42,7 +49,7 @@ public class Scheduler implements Runnable {
             // Only store request if it does not already exist
             floorRequestsToTime.put(event.destinationEvent(), event.time());
         if (!idleElevators.isEmpty()){
-            processElevatorEvent(idleElevators.removeFirst());
+            processElevatorEvent(idleElevators.remove(0));
         }
     }
     /**
@@ -71,6 +78,7 @@ public class Scheduler implements Runnable {
 
     /**
      * Returns false if the elevator is empty and is moving oposite to the future direction.
+     * @return
      */
     private boolean isMovingOppositeToFutureDirection(ElevatorStateEvent event){
         return (event.passengerCountMap().isEmpty() && getElevatorDirection(event) != getOldestFloorRequest().direction());
@@ -129,12 +137,11 @@ public class Scheduler implements Runnable {
      * @param event an elevator state event
      */
     private void processElevatorEvent(ElevatorStateEvent event) {
-        transmitterToFloor.send(event);
         if (floorRequestsToTime.isEmpty() && event.passengerCountMap().isEmpty()) {
-            System.out.printf("Elevator %s idle%n", event.elevatorNum());
+            System.out.println(String.format("Elevator %s idle", event.elevatorNum()));
             idleElevators.add(event);
         } else if (isElevatorStopping(event)) { // Stop elevator for a load
-            System.out.printf("Elevator %s stopped.%n", event.elevatorNum());
+            System.out.println(String.format("Elevator %s stopped.", event.elevatorNum()));
             new Thread(new Loader(event, transmitterToFloor, transmitterToElevator, getElevatorDirection(event))).start();
             floorRequestsToTime.remove(new DestinationEvent(event.currentFloor(),getElevatorDirection(event)));
         } else// Keep moving
